css/styles.css
/* Main body without grid-areas*/
body {
  margin: 0;
  min-height: 100vh;
  width: 100vw;
  color: #fff;
  background: #474747;
  font-family: "Roboto", sans-serif;
  display: flex;
  flex-direction: column;
  min-width: 300px;
}

/* General purpose elements */
h1,
h2 {
  font-weight: 200;
  margin: 0;
}

h1 {
  font-size: 4rem;
}

h2 {
  font-size: 3rem;
}

p {
  font-weight: 200;
  font-size: 2rem;
}

/* Header navigation bar */
.navbar {
  background: #353535;
  padding-left: 30px;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.47);
  display: flex;
}

.navbar__items {
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  align-items: center;
  list-style: none;
  padding: 0;
}

.navbar__item {
  display: inline;
}

.navbar__link {
  font-weight: 200;
  font-size: 1.5rem;
  color: #fff;
  text-decoration: none;
  margin: 0 1rem 0;
}

/* Content */
.section {
  background: #646262;
  box-shadow: -8px 4px 4px rgba(0, 0, 0, 0.47);
  padding: 2rem;
  transition: box-shadow 1s;
}

.section__intro-title {
  margin-bottom: 4rem;
  text-align: flex-end;
}

.section--odd {
  border-radius: 0 25px 25px 0px;
  margin: 2rem 2rem 2rem 0;
}

.section--odd.section--active {
  box-shadow: -0.5rem 0 5rem #fff;
}

.section--even {
  border-radius: 25px 0px 0px 25px;
  margin: 2rem 0 2rem 2rem;
  background: #c71ecb;
}

.section--even.section--active {
  box-shadow: 0.5rem 0 5rem #ec00ff;
}

/* Footer */
footer {
  display: flex;
  justify-content: center;
  text-align: center;
  background: #353535;
  color: #fff;
  font-weight: 200;
  padding: 0.25rem;
  margin-top: auto;
}

/* Mobile adjustments */
@media (max-width: 700px) {
  /* Nav */
  .navbar {
    justify-content: flex-end;
  }
  .navbar__items {
    flex-flow: column nowrap;
    align-items: flex-end;
  }

  /* Content */
  .section {
    padding: 1rem;
  }
  .section--odd {
    margin: 1rem 1rem 1rem 0;
  }
  .section--even {
    margin: 1rem 0 1rem 1rem;
  }
}

